# FlowTime

./: .dockerignore  .editorconfig  .flow-sim.yaml  .gitignore  .gitmodules  .mailmap  CLAUDE.md  Directory.Build.props  FlowTime.sln  FlowTimeSim.sln  LICENSE  README.md  REPO-CONSOLIDATION-PLAN.md  ROADMAP.md  STATUS.md  aiwf.yaml  current_status.md  download-fix-verification.sh  flowtime-sim.code-workspace  flowtime.code-workspace  ft.code-workspace  metrics.json  package-lock.json  package.json  test-api-integration.sh  test-api-m15.yaml  test-complex-m15.yaml  test-pmf-example.yaml
.ai-repo/: .framework-sync-sha  README.md
.claude/: settings.json  statusline.sh
.codex/: instructions.md
.consolidation/: decisions.md  migration-log.md  validation-checklist.md
.devcontainer/: .remove-init-sh.txt  devcontainer.json  init.ps1  init.sh  initialize.sh
.github/: copilot-instructions.md
.serena/: project.yml
ai_old/: README.md
catalogs/: demo-system.yaml  tiny-demo.yaml
docs/: CLI.md  DEVELOPMENT-STATUS.md  NEW-ROADMAP.md  README.md  ROADMAP-LEGACY.md  ROADMAP.md  UI.md  capability-matrix.md  configuration.md  contracts.md  coordination-matrix.md  deployment.md  devcontainer.md  development-setup.md  flowtime-charter.md  flowtime-engine-charter.md  flowtime-sim-charter.md  flowtime-v2.md  flowtime.md  gold-first-kiss-analysis.md  gold-first-kiss-roadmap.md  gold-first-kiss-summary.md  index.md  log.md  metadata-manifest.md  modeling.md  (+4 more)
engine/cli/: Cargo.toml
engine/cli/src/: main.rs  protocol.rs  session.rs
engine/cli/tests/: session_integration.rs
(+2622 files in other folders)
