[package]
name = "flowtime-engine"
version.workspace = true
edition.workspace = true

[dependencies]
flowtime-core = { path = "../core" }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
rmp-serde = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
rmp-serde = { workspace = true }
